--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ uses: Platane/snk@master
   with:
     # github user name to read the contribution graph from (**required**)
     # using action context var `github.repository_owner` or specified user
-    qlinhta: ${{ github.qlinhta }}
+    qlinhta: ${{ qlinhta }}
 
     # path of the generated gif file
     # If left empty, the gif file will not be generated
