--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,13 +1,5 @@
 uses: Platane/snk@master
   with:
-    # github user name to read the contribution graph from (**required**)
-    # using action context var `github.repository_owner` or specified user
-    qlinhta: ${{ qlinhta }}
-
-    # path of the generated gif file
-    # If left empty, the gif file will not be generated
+    qlinhta: ${{ github.qlinhta }}
     gif_out_path: dist/github-snake.gif
-
-    # path of the generated svg file
-    # If left empty, the svg file will not be generated
     svg_out_path: dist/github-snake.svg
